<resources>
    <string name="app_name">Odev2FMSS</string>
    <string name="let_s_get_s">Let\'s Get\nStarted</string>
    <string name="grow_togeth">Grow Together</string>
    <string name="joinnow">JOIN NOW</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="enter_your_username_password"><![CDATA[Enter Your Username & Password]]></string>
    <string name="smaller_button"><![CDATA[<]]></string>
    <string name="forgotten_password">Forgotten Password?</string>
    <string name="or_create_a_new_account">Or Create A New Account</string>
    <string name="create_account">Create\nAccount :)</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_email_id">Enter Email Id</string>
    <string name="create_password">Create Password</string>
    <string name="create_username">Create Username</string>
</resources>