<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccountActivity">

    <Button
        android:id="@+id/buttonSignUp"
        style="@style/blackButtonStyle"
        android:layout_marginTop="728dp"
        android:layout_marginEnd="100dp"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewPinkEllipse1"
        style="@style/ellipseStyle"
        android:layout_marginTop="83dp"
        android:layout_marginEnd="58dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pink_ellipses"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textViewCreateAccount"
        style="@style/headerWelcome"
        android:layout_width="241dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="162dp"
        android:text="@string/create_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/buttonBackToLogin"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/back_button"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription,TextContrastCheck,SpeakableTextPresentCheck,ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageViewPinkEllipse2"
        style="@style/ellipseStyle"
        android:layout_marginTop="336dp"
        android:layout_marginEnd="-125dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pink_ellipses"
        tools:ignore="ContentDescription" />

    <View
        android:id="@+id/dividerCreateAccount1"
        style="@style/dividerStyle"
        android:layout_marginTop="340dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/dividerCreateAccount2"
        style="@style/dividerStyle"
        android:layout_marginTop="465dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/dividerCreateAccount3"
        style="@style/dividerStyle"
        android:layout_marginTop="603dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextEnterEmail"
        style="@style/editTextCredentials"
        android:layout_width="333dp"
        android:layout_height="48dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="56dp"
        android:hint="@string/enter_email_id"
        android:importantForAutofill="no"
        android:inputType="textNoSuggestions|textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextCreateUsername"
        style="@style/editTextCredentials"
        android:layout_width="333dp"
        android:layout_height="48dp"
        android:layout_marginTop="384dp"
        android:layout_marginEnd="56dp"
        android:hint="@string/create_username"
        android:importantForAutofill="no"
        android:inputType="none|text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editTextCreatePassword"
        style="@style/editTextCredentials"
        android:layout_width="333dp"
        android:layout_height="48dp"
        android:layout_marginTop="522dp"
        android:layout_marginEnd="56dp"
        android:hint="@string/create_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>