<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GetStartedActivity">

    <TextView
        android:id="@+id/textViewGetStarted"
        android:layout_width="342dp"
        android:layout_height="190dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="33dp"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="156dp"
        android:background="#00FFFFFF"
        android:backgroundTint="#00FFFFFF"
        android:backgroundTintMode="add"
        android:fontFamily="@font/inter_bold"
        android:gravity="top"
        android:lineHeight="75sp"
        android:lineSpacingExtra="-16sp"
        android:text="@string/let_s_get_s"
        android:textColor="@color/black"
        android:textFontWeight="800"
        android:textSize="75sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewGrowTogether"
        android:layout_width="143dp"
        android:layout_height="26dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="7dp"
        android:background="#00FFFFFF"
        android:backgroundTint="#00FFFFFF"
        android:gravity="top"
        android:lineHeight="24.2dp"
        android:text="@string/grow_togeth"
        android:textColor="@color/black"
        android:textFontWeight="500"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/textViewGetStarted"
        app:layout_constraintStart_toStartOf="@+id/textViewGetStarted"
        tools:visibility="visible" />

    <Button
        android:id="@+id/buttonJoinNow"
        android:layout_width="281dp"
        android:layout_height="62dp"
        android:layout_marginStart="74dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/custom_button"
        android:fontFamily="@font/inder"
        android:lineHeight="45dp"
        android:text="@string/joinnow"
        android:textColor="#FFFFFF"
        android:textFontWeight="400"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageViewBlueEllipse1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginBottom="572dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/big_ellipses"
        tools:ignore="ContentDescription"/>

    <ImageView
        android:id="@+id/imageViewBlueEllipse2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="212dp"
        android:layout_marginBottom="312dp"
        android:adjustViewBounds="false"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/big_ellipses"
        tools:ignore="ContentDescription"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageViewBigFace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="175dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="478dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/bigface" />

    <ImageView
        android:id="@+id/imageViewSmallFace"
        android:layout_width="103dp"
        android:layout_height="103dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="659dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/smallface"
        tools:ignore="ContentDescription"/>


    <!-- Grow Together -->


</androidx.constraintlayout.widget.ConstraintLayout>